[package]
name = "rgrep"
version = "0.1.0"
authors = ["nestyy"]
edition = "2021"
rust-version = "1.80"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rgrep"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
clap = { version = "4.5.31", features = ["derive"] }
memmap2 = "0.9.5"
rayon = "1.10.0"
thiserror = "1.0.38"
